adds referrals
