# src/server/src/api/v1/controllers/index.ts
@@ -1,2 +1,3 @@
 export * from './articles';
+export * from './referrals';
 export * from './sources';
