# src/server/src/schema/v1/models/dated.ts
@@ -1,0 +1,6 @@
+export type DatedAttributes = {
+  id?: number;
+  createdAt?: Date;
+  updatedAt?: Date;
+  deletedAt?: Date;
+};
